spec/e2e/import/runtime_error_when_using_imported_function.lit
import '../../fixtures/function.lit'

open_file("unknown-file.foobar") # error: [function.lit:4] Runtime error: File not found: unknown-file.foobar
